src/test/ui/parser/keyword-override.stderr
error: expected pattern, found reserved keyword `override`
  --> $DIR/keyword-override.rs:2:9
   |
LL |     let override = ();
   |         ^^^^^^^^ expected pattern

error: aborting due to previous error

